--- a/app/views/main.html
+++ b/app/views/main.html
@@ -5,7 +5,7 @@
 <div class="row marketing">
   <h4>Keep track of you missed prayers</h4>
   <p>
-    It's easy now  
+    It's easy now.
   </p>
 
   <h4>And your missed fasts too</h4>
